--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerenciador de Itens SPA</title>
-    <link rel="stylesheet" href="app\front\css\cadastro.css">
-    <link rel="stylesheet" href="app\front\css\login.css">
-    <link rel="stylesheet" href="app\front\css\recuperar_senha.css">
+    <link rel="stylesheet" href="../front/css/login.css">
+    <link rel="stylesheet" href="../front/css/cadastro.css">
 </head>
 <body>
     <div id="app"></div>
-    <script type="module" src="app\front\js\app.js"></script>
+    <script type="module" src="../front/js/app.js"></script>
 </body>
 </html>
